--- a/package.json
+++ b/package.json
@@ -3,31 +3,30 @@
   "version": "1.0.0",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "cd contract && node ./compile.js",
+    "build:rustup": "cd contract && rustup target add wasm32-unknown-unknown && cargo build --all --target wasm32-unknown-unknown --release",
+    "build:cpwasm": "mkdir -p out && rm -f ./out/main.wasm && cp ./contract/target/wasm32-unknown-unknown/release/hello_near.wasm ./out/hello-near.wasm",
+    "build": "npm run build:rustup && npm run build:cpwasm",
     "deploy": "npm run build && near dev-deploy",
-    "test": "npm run build && cd contract && cargo test && cd .. && jest test --runInBand",
-    "jest": "npm run build && jest test --runInBand",
+    "test:integration:ts": "ava --verbose",
+    "test:integration:rs": "cd integration-tests/rs && cargo run --example integration-tests",
+    "test:integration": "npm run build && npm run test:integration:ts && npm run test:integration:rs",
+    "test:unit": "cd contract && cargo test",
+    "test": "npm run test:unit && npm run test:integration",
     "start": "npm run build && npm run deploy && echo The app is starting! && env-cmd -f ./neardev/dev-account.env parcel frontend/index.html --open",
     "dev": "nodemon --watch contract -e ts --exec \"npm run start\""
   },
   "devDependencies": {
-    "env-cmd": "~10.1.0",
-    "jest": "~26.6.2",
-    "jest-environment-node": "~26.6.2",
-    "near-cli": "~2.1.1",
-    "nodemon": "~2.0.3",
-    "parcel-bundler": "~1.12.4",
-    "shelljs": "^0.8.5"
+    "env-cmd": "^10.1.0",
+    "near-cli": "^3.2.0",
+    "nodemon": "~2.0.15",
+    "parcel-bundler": "~1.12.5",
+    "ava": "^4.2.0",
+    "near-workspaces": "^2.0.0",
+    "typescript": "^4.6.4",
+    "ts-node": "^10.7.0"
   },
   "dependencies": {
     "near-api-js": "~0.43.1",
     "regenerator-runtime": "~0.13.5"
-  },
-  "jest": {
-    "testEnvironment": "near-cli/test_environment",
-    "testPathIgnorePatterns": [
-      "<rootDir>/contract/",
-      "<rootDir>/node_modules/"
-    ]
   }
 }
