renamed package and tests

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "hello-near",
+  "name": "hello_near",
   "version": "1.0.0",
   "license": "UNLICENSED",
   "scripts": {
     "build:rustup": "cd contract && rustup target add wasm32-unknown-unknown && cargo build --all --target wasm32-unknown-unknown --release",
-    "build:cpwasm": "mkdir -p out && rm -f ./out/main.wasm && cp ./contract/target/wasm32-unknown-unknown/release/hello_near.wasm ./out/hello-near.wasm",
+    "build:cpwasm": "mkdir -p out && rm -f ./out/main.wasm && cp ./contract/target/wasm32-unknown-unknown/release/hello_near.wasm ./out/hello_near.wasm",
     "build": "npm run build:rustup && npm run build:cpwasm",
     "deploy": "npm run build && near dev-deploy",
     "test:integration:ts": "ava --verbose",
