--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "license": "UNLICENSED",
   "scripts": {
-    "build:rustup": "cd contract && rustup target add wasm32-unknown-unknown && cargo build --all --target wasm32-unknown-unknown --release",
-    "build:cpwasm": "mkdir -p out && rm -f ./out/main.wasm && cp ./contract/target/wasm32-unknown-unknown/release/hello_near.wasm ./out/main.wasm",
     "build": "npm run build:rustup && npm run build:cpwasm",
-    "deploy": "npm run build && near dev-deploy",
-    "test:integration:ts": "ava --verbose",
-    "test:integration:rs": "cd integration-tests/rs && cargo run --example integration-tests",
-    "test:integration": "npm run build && npm run test:integration:ts && npm run test:integration:rs",
-    "test:unit": "cd contract && cargo test",
-    "test": "npm run test:unit && npm run test:integration",
-    "start": "npm run build && npm run deploy && echo The app is starting! && env-cmd -f ./neardev/dev-account.env parcel frontend/index.html --open",
-    "dev": "nodemon --watch contract -e ts --exec \"npm run start\""
+      "build:rustup": "cd contract && rustup target add wasm32-unknown-unknown && cargo build --all --target wasm32-unknown-unknown --release",
+      "build:cpwasm": "mkdir -p out && rm -f ./out/main.wasm && cp ./contract/target/wasm32-unknown-unknown/release/hello_near.wasm ./out/main.wasm",
+    "deploy": "near dev-deploy",
+    "start": "npm run deploy && echo The app is starting! && env-cmd -f ./neardev/dev-account.env parcel frontend/index.html --open",
+    "dev": "nodemon --watch contract -e ts --exec \"npm run start\"",
+    "test": "npm run build && npm run test:unit && npm run test:integration",
+      "test:unit": "cd contract && cargo test",
+      "test:integration": "npm run test:integration:ts && npm run test:integration:rs",
+        "test:integration:ts": "ava --verbose",
+        "test:integration:rs": "cd integration-tests/rs && cargo run --example integration-tests"
+
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
