--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-near-sdk = "4.0.0-pre.7"
+near-sdk = "4.0.0"
 uint = { version = "0.8.3", default-features = false }
 
 [profile.release]
