--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "near-cli": "^3.2.0",
+    "near-cli": "^3.3.0",
     "nodemon": "~2.0.15",
-    "parcel-bundler": "~1.12.5",
+    "parcel": "^2.6.0",
     "ava": "^4.2.0",
     "near-workspaces": "^2.0.0",
-    "typescript": "^4.6.4",
-    "ts-node": "^10.7.0"
+    "typescript": "^4.7.2",
+    "process": "^0.11.10",
+    "near-api-js": "^0.44.2"
   },
   "dependencies": {
     "near-api-js": "~0.43.1",
-    "regenerator-runtime": "~0.13.5"
+    "regenerator-runtime": "~0.13.9"
   }
 }
