--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   "devDependencies": {
     "env-cmd": "^10.1.0",
     "near-cli": "^3.3.0",
-    "nodemon": "~2.0.15",
+    "nodemon": "~2.0.16",
     "parcel": "^2.6.0",
     "ava": "^4.2.0",
     "near-workspaces": "^2.0.0",
     "typescript": "^4.7.2",
     "process": "^0.11.10",
-    "near-api-js": "^0.44.2"
+    "ts-node": "^10.8.0"
   },
   "dependencies": {
     "near-api-js": "~0.43.1",
