--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 
 # misc
 .DS_Store
+.idea
 .env.local
 .env.development.local
 .env.test.local
@@ -33,3 +34,4 @@ yarn-error.log*
 
 .cache
 dist
+.parcel-cache
