--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "template",
   "version": "1.0.0",
   "description": "Contract template with near-sdk-js",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "near-sdk build",
+    "build": "near-sdk build src/index.ts",
     "test": "ava"
   },
   "author": "Near Inc <hello@nearprotocol.com>",
@@ -15,7 +14,5 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "ava": "^4.2.0",
-    "near-workspaces": "^2.0.0"
   }
 }
