--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "devDependencies": {
     "ava": "^4.2.0",
+    "buffer": "^6.0.3",
     "env-cmd": "^10.1.0",
     "near-cli": "^3.2.0",
     "near-workspaces": "^3.1.0",
     "nodemon": "~2.0.15",
+    "process": "^0.11.10",
     "ts-node": "^10.7.0",
     "typescript": "^4.7.4"
   },
