project & wallet-selector update

--- a/package.json
+++ b/package.json
@@ -1,34 +1,20 @@
 {
-  "name": "hello_near",
+  "name": "hello-near-rust",
   "version": "1.0.0",
-  "license": "UNLICENSED",
+  "license": "(MIT AND Apache-2.0)",
   "scripts": {
-    "build": "npm run build:rustup && npm run build:cpwasm",
-      "build:rustup": "cd contract && rustup target add wasm32-unknown-unknown && cargo build --all --target wasm32-unknown-unknown --release",
-      "build:cpwasm": "mkdir -p out && rm -f ./out/main.wasm && cp ./contract/target/wasm32-unknown-unknown/release/hello_near.wasm ./out/main.wasm",
-    "deploy": "npm run build && near dev-deploy",
-    "start": "npm run deploy && echo The app is starting! && env-cmd -f ./neardev/dev-account.env parcel frontend/index.html --open",
-    "dev": "nodemon --watch contract -e ts --exec \"npm run start\"",
-    "test": "npm run build && npm run test:unit && npm run test:integration",
-      "test:unit": "cd contract && cargo test",
-      "test:integration": "npm run test:integration:ts && npm run test:integration:rs",
-        "test:integration:ts": "ava --verbose",
-        "test:integration:rs": "cd integration-tests/rs && cargo run --example integration-tests"
-
+    "start": "cd frontend && npm run start",
+    "deploy": "cd contract && ./deploy.sh",
+    "build": "npm run build:contract && npm run build:web",
+    "build:web": "cd frontend && npm run build",
+    "build:contract": "cd contract && ./build.sh",
+    "test": "npm run build:contract && npm run test:unit && npm run test:integration",
+    "test:unit": "cd contract && cargo test",
+    "test:integration": "cd integration-tests && npm test -- -- \"./contract/target/wasm32-unknown-unknown/release/contract.wasm\"",
+    "postinstall": "cd frontend && npm install && cd .. && cd integration-tests && npm install && cd .. && echo rs contract"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0",
-    "near-cli": "^3.3.0",
-    "nodemon": "~2.0.16",
-    "parcel": "^2.6.0",
-    "ava": "^4.2.0",
-    "near-workspaces": "^2.0.0",
-    "typescript": "^4.7.2",
-    "process": "^0.11.10",
-    "ts-node": "^10.8.0"
+    "near-cli": "^3.3.0"
   },
-  "dependencies": {
-    "near-api-js": "~0.43.1",
-    "regenerator-runtime": "~0.13.9"
-  }
+  "dependencies": {}
 }
