--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "hello_near"
+name = "contract"
 version = "1.0.0"
 authors = ["Near Inc <hello@near.org>"]
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 near-sdk = "4.0.0"
-uint = { version = "0.8.3", default-features = false }
+uint = { version = "0.9.3", default-features = false }
 
 [profile.release]
 codegen-units = 1
