--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 tasks:
-  - init: yarn
-    command: yarn dev
+  - init: npm start
+    command: npm run deploy && npm run start
 ports:
   - port: 1234
     onOpen: open-browser
