--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,32 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # Developer note: near.gitignore will be renamed to .gitignore upon project creation
 # dependencies
-/node_modules
-*/target
+node_modules
 /.pnp
 .pnp.js
-/out
 
-#keys
-/neardev
+# build
+**/out
+**/dist
+**/node_modules
+
+# keys
+**/neardev
 
 # testing
 /coverage
 
 # production
-/build
+**/build
 
 # misc
 .DS_Store
-.idea
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+/.cache
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# lock files
-*Cargo.lock
-*-lock.json
-
-.cache
-dist
-.parcel-cache
