--- a/contract-ts/sandbox-ts/package.json
+++ b/contract-ts/sandbox-ts/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "integration-tests",
+  "name": "ava-testing",
   "version": "1.0.0",
   "license": "(MIT AND Apache-2.0)",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "test": "ava"
   },
   "devDependencies": {
-    "@types/bn.js": "^5.1.0",
-    "@types/node": "^18.6.2",
-    "ava": "^4.2.0",
-    "near-workspaces": "^3.2.1",
-    "ts-node": "^10.8.0",
-    "typescript": "^4.7.2"
+    "@types/bn.js": "^5.1.4",
+    "@types/node": "^20.8.10",
+    "ava": "^5.3.1",
+    "near-workspaces": "^3.3.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "dependencies": {}
 }
