--- a/.github/workflows/tests-ts.yml
+++ b/.github/workflows/tests-ts.yml
@@ -5,12 +5,13 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, macos-latest]
+        node-version: [18, 20]
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: ${{ matrix.node-version }}
       - name: Install and test modules
         run: |
           cd ./contract-ts
