--- a/.github/workflows/tests-rs.yml
+++ b/.github/workflows/tests-rs.yml
@@ -6,12 +6,12 @@ jobs:
       matrix:
         platform: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.platform }}
+    concurrency:
+      group: rs-tests
+      cancel-in-progress: true
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: "16"
       - name: Install and test modules
         run: |
           cd ./contract-rs
-          ./test.sh
+          cargo test
