--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -4,9 +4,6 @@
 #
 name: Deploy Next.js site to Pages
 
-env:
-  NODE_ENV: 'GHPages'
-
 on:
   # Runs on pushes targeting the default branch
   push:
@@ -46,16 +43,6 @@ jobs:
           #
           # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
-      - name: Restore cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ./frontend/.next/cache
-          # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install and test modules
         run: |
           cd ./frontend
@@ -64,7 +51,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./frontend/out
+          path: ./frontend/.next
 
   # Deployment job
   deploy:
