--- a/contract-rs/Cargo.toml
+++ b/contract-rs/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["cdylib", "rlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-near-sdk = "5.1.0"
+near-sdk = { version = "5.1.0", features = ["legacy"] }
 
 [dev-dependencies]
 near-sdk = { version = "5.1.0", features = ["unit-testing"] }
