--- a/contract-ts/package.json
+++ b/contract-ts/package.json
@@ -8,16 +8,14 @@
     "test": "$npm_execpath run build && ava -- ./build/hello_near.wasm"
   },
   "dependencies": {
-    "near-cli": "^4.0.8",
     "near-sdk-js": "1.0.0"
   },
   "devDependencies": {
-    "@ava/typescript": "^4.1.0",
-    "ava": "^6.1.2",
+    "ava": "^6.1.3",
     "near-workspaces": "^3.5.0",
-    "ts-morph": "^21.0.1",
-    "ts-node": "^10.9.2",
-    "tsimp": "^2.0.11",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5"
+  },
+  "ava": {
+    "files": ["sandbox-test/*.ava.js"]
   }
 }
