--- a/contract-ts/package.json
+++ b/contract-ts/package.json
@@ -8,6 +8,7 @@
     "test": "$npm_execpath run build && ava -- ./build/hello_near.wasm"
   },
   "dependencies": {
+    "borsh": "^1.0.0",
     "near-sdk-js": "2.0.0"
   },
   "devDependencies": {
