--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@near-wallet-selector/here-wallet": "^8.9.11",
     "@near-wallet-selector/modal-ui": "^8.9.11",
     "@near-wallet-selector/my-near-wallet": "^8.9.11",
+    "@near-wallet-selector/bitte-wallet": "^8.9.11",
     "bootstrap": "^5",
     "bootstrap-icons": "^1.11.3",
     "near-api-js": "^4.0.3",
