--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,20 +20,22 @@
     "@near-wallet-selector/my-near-wallet": "^8.9.13",
     "@tanstack/react-query": "^5.56.2",
     "@web3modal/wagmi": "^5.1.9",
-    "viem": "^2.21.10",
-    "wagmi": "^2.12.12",
     "bootstrap": "^5",
     "bootstrap-icons": "^1.11.3",
     "near-api-js": "^4.0.3",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "^2.21.10",
+    "wagmi": "^2.12.12"
   },
   "resolutions": {
     "near-api-js": "4.0.3"
   },
   "devDependencies": {
+    "encoding": "^0.1.13",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "pino-pretty": "^11.2.2"
   }
 }
