--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,10 @@
   },
   "dependencies": {
     "@near-js/providers": "^1.0.0",
+    "@near-wallet-selector/bitte-wallet": "^8.9.13",
     "@near-wallet-selector/core": "^8.9.13",
     "@near-wallet-selector/ethereum-wallets": "^8.9.13",
-    "@near-wallet-selector/here-wallet": "^8.9.13",
+    "@near-wallet-selector/meteor-wallet": "^8.9.13",
     "@near-wallet-selector/modal-ui": "^8.9.13",
     "@near-wallet-selector/my-near-wallet": "^8.9.13",
     "@web3modal/wagmi": "^5.1.9",
@@ -24,6 +25,7 @@
     "near-api-js": "^5",
     "next": "14.2.13",
     "react": "^18",
+    "react-dom": "^18",
     "wagmi": "^2.12.14"
   },
   "resolutions": {
