--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,25 +16,33 @@
     "@near-wallet-selector/bitte-wallet": "^8.9.13",
     "@near-wallet-selector/core": "^8.9.13",
     "@near-wallet-selector/ethereum-wallets": "^8.9.13",
+    "@near-wallet-selector/here-wallet": "^8.9.13",
+    "@near-wallet-selector/ledger": "^8.9.13",
     "@near-wallet-selector/meteor-wallet": "^8.9.13",
     "@near-wallet-selector/modal-ui": "^8.9.13",
     "@near-wallet-selector/my-near-wallet": "^8.9.13",
-    "@web3modal/wagmi": "^5.1.9",
+    "@near-wallet-selector/sender": "^8.9.13",
+    "@web3modal/wagmi": "^5.1.10",
     "bootstrap": "^5",
     "bootstrap-icons": "^1.11.3",
-    "near-api-js": "^5",
+    "near-api-js": "^4.0.3",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "wagmi": "^2.12.14"
+    "wagmi": "^2.12.16"
   },
-  "resolutions": {
-    "near-api-js": "4.0.3"
+  "overrides": {
+    "@near-wallet-selector/ethereum-wallets": {
+      "near-api-js": "4.0.3"
+    }
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
     "encoding": "^0.1.13",
-    "eslint": "^9",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.13",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "pino-pretty": "^11.2.2"
   }
 }
