feat: added wallets

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "@near-wallet-selector/core": "^8.10.0",
     "@near-wallet-selector/ethereum-wallets": "^8.10.0",
     "@near-wallet-selector/here-wallet": "^8.10.0",
+    "@near-wallet-selector/hot-wallet": "^8.10.0",
     "@near-wallet-selector/ledger": "^8.10.0",
     "@near-wallet-selector/meteor-wallet": "^8.10.0",
+    "@near-wallet-selector/meteor-wallet-app": "^8.10.0",
     "@near-wallet-selector/modal-ui": "^8.10.0",
     "@near-wallet-selector/my-near-wallet": "^8.10.0",
     "@near-wallet-selector/near-mobile-wallet": "^8.10.0",
