--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,30 +13,31 @@
   },
   "dependencies": {
     "@near-js/providers": "^1.0.1",
-    "@near-wallet-selector/bitte-wallet": "^8.10.0",
-    "@near-wallet-selector/core": "^8.10.0",
-    "@near-wallet-selector/ethereum-wallets": "^8.10.0",
-    "@near-wallet-selector/here-wallet": "^8.10.0",
-    "@near-wallet-selector/hot-wallet": "^8.10.0",
-    "@near-wallet-selector/ledger": "^8.10.0",
-    "@near-wallet-selector/meteor-wallet": "^8.10.0",
-    "@near-wallet-selector/meteor-wallet-app": "^8.10.0",
-    "@near-wallet-selector/modal-ui": "^8.10.0",
-    "@near-wallet-selector/my-near-wallet": "^8.10.0",
-    "@near-wallet-selector/near-mobile-wallet": "^8.10.0",
-    "@near-wallet-selector/nightly": "^8.10.0",
-    "@near-wallet-selector/react-hook": "^8.9.15",
-    "@near-wallet-selector/sender": "^8.10.0",
-    "@near-wallet-selector/welldone-wallet": "^8.10.0",
-    "@reown/appkit": "^1.6.9",
-    "@reown/appkit-adapter-wagmi": "^1.6.9",
-    "@wagmi/core": "^2.16.5",
+    "@near-wallet-selector/bitte-wallet": "9.0.0-beta.3",
+    "@near-wallet-selector/core": "9.0.0-beta.3",
+    "@near-wallet-selector/ethereum-wallets": "9.0.0-beta.3",
+    "@near-wallet-selector/here-wallet": "9.0.0-beta.3",
+    "@near-wallet-selector/hot-wallet": "9.0.0-beta.3",
+    "@near-wallet-selector/ledger": "9.0.0-beta.3",
+    "@near-wallet-selector/meteor-wallet": "9.0.0-beta.3",
+    "@near-wallet-selector/meteor-wallet-app": "9.0.0-beta.3",
+    "@near-wallet-selector/modal-ui": "9.0.0-beta.3",
+    "@near-wallet-selector/my-near-wallet": "9.0.0-beta.3",
+    "@near-wallet-selector/near-mobile-wallet": "9.0.0-beta.3",
+    "@near-wallet-selector/nightly": "9.0.0-beta.3",
+    "@near-wallet-selector/react-hook": "9.0.0-beta.3",
+    "@near-wallet-selector/sender": "9.0.0-beta.3",
+    "@near-wallet-selector/welldone-wallet": "9.0.0-beta.3",
+    "@wagmi/connectors": "^5.7.12",
+    "@wagmi/core": "2.13.8",
+    "@web3modal/wagmi": "^5.1.11",
     "bootstrap": "^5",
     "bootstrap-icons": "^1.11.3",
     "near-api-js": "^5.0.1",
     "next": "15.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "^2.26.2"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
