--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,16 +28,14 @@
     "@near-wallet-selector/react-hook": "9.0.0",
     "@near-wallet-selector/sender": "9.0.0",
     "@near-wallet-selector/welldone-wallet": "9.0.0",
-    "@wagmi/connectors": "^5.7.12",
-    "@wagmi/core": "2.13.8",
-    "@web3modal/wagmi": "^5.1.11",
+    "@reown/appkit": "^1.7.3",
+    "@reown/appkit-adapter-wagmi": "^1.7.3",
     "bootstrap": "^5",
     "bootstrap-icons": "^1.11.3",
-    "near-api-js": "^5.0.1",
+    "near-api-js": "^5.1.1",
     "next": "15.2.1",
     "react": "^18",
-    "react-dom": "^18",
-    "viem": "^2.26.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
