--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,32 +12,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@near-js/providers": "^1.0.1",
-    "@near-wallet-selector/bitte-wallet": "9.0.1",
-    "@near-wallet-selector/core": "9.0.1",
-    "@near-wallet-selector/ethereum-wallets": "9.0.1",
-    "@near-wallet-selector/here-wallet": "9.0.1",
-    "@near-wallet-selector/hot-wallet": "9.0.1",
-    "@near-wallet-selector/ledger": "9.0.1",
-    "@near-wallet-selector/meteor-wallet": "9.0.1",
-    "@near-wallet-selector/meteor-wallet-app": "9.0.1",
-    "@near-wallet-selector/modal-ui": "9.0.1",
-    "@near-wallet-selector/my-near-wallet": "9.0.1",
-    "@near-wallet-selector/near-mobile-wallet": "9.0.1",
-    "@near-wallet-selector/nightly": "9.0.1",
-    "@near-wallet-selector/react-hook": "9.0.1",
-    "@near-wallet-selector/sender": "9.0.1",
-    "@near-wallet-selector/welldone-wallet": "9.0.1",
-    "@reown/appkit": "1.6.9",
-    "@reown/appkit-adapter-wagmi": "1.6.9",
+    "@near-wallet-selector/bitte-wallet": "^9.0.1",
+    "@near-wallet-selector/core": "^9.0.1",
+    "@near-wallet-selector/ethereum-wallets": "^9.0.1",
+    "@near-wallet-selector/here-wallet": "^9.0.1",
+    "@near-wallet-selector/hot-wallet": "^9.0.1",
+    "@near-wallet-selector/ledger": "^9.0.1",
+    "@near-wallet-selector/meteor-wallet": "^9.0.1",
+    "@near-wallet-selector/meteor-wallet-app": "^9.0.1",
+    "@near-wallet-selector/modal-ui": "^9.0.1",
+    "@near-wallet-selector/my-near-wallet": "^9.0.1",
+    "@near-wallet-selector/near-mobile-wallet": "^9.0.1",
+    "@near-wallet-selector/react-hook": "^9.0.1",
+    "@near-wallet-selector/sender": "^9.0.1",
+    "@near-wallet-selector/welldone-wallet": "^9.0.1",
+    "@reown/appkit": "^1.7.4",
+    "@reown/appkit-adapter-wagmi": "^1.7.4",
+    "@wagmi/core": "^2.17.1",
     "bootstrap": "^5",
     "bootstrap-icons": "^1.11.3",
-    "near-api-js": "^5.1.1",
+    "near-api-js": "^5.0.0",
     "next": "^15",
     "react": "^18",
-    "react-dom": "^18",
-    "viem": "2.21.26",
-    "wagmi": "2.12.17"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
