--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,20 +12,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@near-wallet-selector/bitte-wallet": "^9.0.2",
-    "@near-wallet-selector/core": "^9.0.2",
-    "@near-wallet-selector/ethereum-wallets": "^9.0.2",
-    "@near-wallet-selector/here-wallet": "^9.0.2",
-    "@near-wallet-selector/hot-wallet": "^9.0.2",
-    "@near-wallet-selector/ledger": "^9.0.2",
-    "@near-wallet-selector/meteor-wallet": "^9.0.2",
-    "@near-wallet-selector/meteor-wallet-app": "^9.0.2",
-    "@near-wallet-selector/modal-ui": "^9.0.2",
-    "@near-wallet-selector/my-near-wallet": "^9.0.2",
-    "@near-wallet-selector/near-mobile-wallet": "^9.0.2",
-    "@near-wallet-selector/react-hook": "^9.0.2",
-    "@near-wallet-selector/sender": "^9.0.2",
-    "@near-wallet-selector/welldone-wallet": "^9.0.2",
+    "@near-wallet-selector/bitte-wallet": "^9.4.0",
+    "@near-wallet-selector/core": "^9.4.0",
+    "@near-wallet-selector/ethereum-wallets": "^9.4.0",
+    "@near-wallet-selector/here-wallet": "^9.4.0",
+    "@near-wallet-selector/hot-wallet": "^9.4.0",
+    "@near-wallet-selector/ledger": "^9.4.0",
+    "@near-wallet-selector/meteor-wallet": "9.0.2",
+    "@near-wallet-selector/meteor-wallet-app": "9.0.2",
+    "@near-wallet-selector/modal-ui": "^9.4.0",
+    "@near-wallet-selector/my-near-wallet": "^9.4.0",
+    "@near-wallet-selector/near-mobile-wallet": "^9.4.0",
+    "@near-wallet-selector/react-hook": "^9.4.0",
+    "@near-wallet-selector/sender": "^9.4.0",
+    "@near-wallet-selector/welldone-wallet": "^9.4.0",
     "@reown/appkit": "^1.7.7",
     "@reown/appkit-adapter-wagmi": "^1.7.7",
     "@wagmi/core": "^2.17.2",
