chore: simplify example

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
+    "@types/react": "^19.1.16",
     "encoding": "^0.1.13",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.0.3",
