--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,20 +12,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@near-wallet-selector/bitte-wallet": "9.5.1",
-    "@near-wallet-selector/core": "9.5.1",
-    "@near-wallet-selector/ethereum-wallets": "9.5.1",
-    "@near-wallet-selector/here-wallet": "9.5.1",
-    "@near-wallet-selector/hot-wallet": "9.5.1",
-    "@near-wallet-selector/ledger": "9.5.1",
-    "@near-wallet-selector/meteor-wallet": "9.5.1",
-    "@near-wallet-selector/meteor-wallet-app": "9.5.1",
-    "@near-wallet-selector/modal-ui": "9.5.1",
-    "@near-wallet-selector/my-near-wallet": "9.5.1",
-    "@near-wallet-selector/near-mobile-wallet": "9.5.1",
-    "@near-wallet-selector/react-hook": "9.5.1",
-    "@near-wallet-selector/sender": "9.5.1",
-    "@near-wallet-selector/welldone-wallet": "9.5.1",
+    "@near-wallet-selector/bitget-wallet": "9.5.4",
+    "@near-wallet-selector/coin98-wallet": "9.5.4",
+    "@near-wallet-selector/core": "9.5.4",
+    "@near-wallet-selector/ethereum-wallets": "9.5.4",
+    "@near-wallet-selector/hot-wallet": "9.5.4",
+    "@near-wallet-selector/intear-wallet": "9.5.4",
+    "@near-wallet-selector/ledger": "9.5.4",
+    "@near-wallet-selector/math-wallet": "9.5.4",
+    "@near-wallet-selector/meteor-wallet": "9.5.4",
+    "@near-wallet-selector/meteor-wallet-app": "9.5.4",
+    "@near-wallet-selector/modal-ui": "9.5.4",
+    "@near-wallet-selector/near-mobile-wallet": "9.5.4",
+    "@near-wallet-selector/okx-wallet": "9.5.4",
+    "@near-wallet-selector/ramper-wallet": "9.5.4",
+    "@near-wallet-selector/react-hook": "9.5.4",
+    "@near-wallet-selector/sender": "9.5.4",
+    "@near-wallet-selector/unity-wallet": "9.5.4",
+    "@near-wallet-selector/welldone-wallet": "9.5.4",
     "@reown/appkit": "^1.7.7",
     "@reown/appkit-adapter-wagmi": "^1.7.7",
     "@wagmi/core": "^2.17.2",
@@ -38,9 +42,11 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
+    "@types/react": "19.2.1",
     "encoding": "^0.1.13",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.0.3",
-    "pino-pretty": "^13.0.0"
+    "pino-pretty": "^13.0.0",
+    "typescript": "5.9.3"
   }
 }
