--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^22.10.1",
-    "@types/react": "19.2.1",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
     "encoding": "^0.1.13",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.0.3",
