--- a/.github/workflows/tests-rs.yml
+++ b/.github/workflows/tests-rs.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
       - name: Install and test modules
         run: |
           cd ./contract-rs
