--- a/contract-rs/Cargo.toml
+++ b/contract-rs/Cargo.toml
@@ -13,13 +13,14 @@ crate-type = ["cdylib", "rlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-near-sdk = "5.4.0"
+near-sdk = "5.24.0"
 
 [dev-dependencies]
-near-sdk = { version = "5.4.0", features = ["unit-testing"] }
-near-workspaces = { version = "0.14.1", features = ["unstable"] }
+near-sdk = { version = "5.24.0", features = ["unit-testing"] }
+near-workspaces = { version = "0.22.0", features = ["unstable"] }
 tokio = { version = "1.12.0", features = ["full"] }
 serde_json = "1"
+home = "=0.5.9"
 
 [profile.release]
 codegen-units = 1
