--- a/.github/workflows/tests-rs.yml
+++ b/.github/workflows/tests-rs.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install cargo-near
-        run: cargo install cargo-near
+        run: curl --proto '=https' --tlsv1.2 -LsSf https://github.com/near/cargo-near/releases/latest/download/cargo-near-installer.sh | sh
       - name: Install and test modules
         run: |
           cd ./contract-rs
