fix: add missing uv commands for virtual environment setup in Python CI

--- a/.github/workflows/tests-py.yml
+++ b/.github/workflows/tests-py.yml
@@ -13,5 +13,7 @@ jobs:
       - name: Build and test contract
         run: |
           cd ./contract-py
+          uv venv
+          uv sync
           uvx nearc contract.py
           uv run pytest
