--- a/.github/workflows/tests-py.yml
+++ b/.github/workflows/tests-py.yml
@@ -10,6 +10,13 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install uv
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Install Emscripten
+        run: |
+          git clone https://github.com/emscripten-core/emsdk.git
+          cd emsdk
+          ./emsdk install latest
+          ./emsdk activate latest
+          echo "$(pwd)/emsdk-main:$PATH" >> $GITHUB_ENV
       - name: Build and test contract
         run: |
           cd ./contract-py
