--- a/.github/workflows/tests-py.yml
+++ b/.github/workflows/tests-py.yml
@@ -16,7 +16,8 @@ jobs:
           cd emsdk
           ./emsdk install latest
           ./emsdk activate latest
-          echo "$(pwd)/emsdk-main:$PATH" >> $GITHUB_ENV
+          source ./emsdk_env.sh
+          echo "PATH=$PATH" >> $GITHUB_ENV
       - name: Build and test contract
         run: |
           cd ./contract-py
